--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_info?createDatabaseIfNotExi
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
+# spring.jpa.show-sql=true
 
-#Terminal colorido
+# Colored Terminal
 spring.output.ansi.enabled=ALWAYS
+
+# StackTrace on Json response
+server.error.include-exception=true
+
