--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.projectlombok:lombok:1.18.22'
+	implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
     runtimeOnly 'com.mysql:mysql-connector-j'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.1.0'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
-
 }
 
 dependencyManagement {
