--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/BANCO_COMPUTER?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=
-#spring.datasource.url=jdbc:mysql://localhost:3306/<DB_NAME>?createDatabaseIfNotExist=true
-#spring.datasource.username=<MYSQL_USERNAME>
-#spring.datasource.password=<MYSQL_PASSWORD>
+spring.datasource.url=jdbc:mysql://localhost:3306/<DB_NAME>?createDatabaseIfNotExist=true
+spring.datasource.username=<MYSQL_USERNAME>
+spring.datasource.password=<MYSQL_PASSWORD>
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # spring.jpa.show-sql=true
 
